--- a/Block II - Nonparametric Inference/NPS-lab04_multivariate_tests.Rmd
+++ b/Block II - Nonparametric Inference/NPS-lab04_multivariate_tests.Rmd
@@ -3,6 +3,7 @@ title: "Lab 04 - Permutational Multivariate Tests"
 author: "Nonparametric statistics ay 2023/2024"
 date: "2023/10/11"
 output:
+  pdf_document: default
   html_document: default
 ---
 
